# Geode

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/geode/classification/: classifier.h
include/geode/clustering/: kmeans.h  spatial_hash.h
include/geode/core/: primitive.h  scene.h  types.h
include/geode/loaders/: mesh_loader.h  ply_loader.h
include/geode/metrics/: alpha_metrics.h  normal_coherence.h  pca_analysis.h
spec/: .gitkeep  1.1-ply-loader.md  1.2-mesh-loader.md  1.2-primitive-representation.md  1.3-unified-primitive.md  2.1-spatial-clustering.md  3.1-pca-analysis.md  3.2-alpha-metrics.md  3.3-normal-coherence.md  3.4-classification-logic.md  4.1-viewer-setup.md  4.2-visualization-modes.md  4.3-inspection-tools.md  5.1-mesh-extraction.md  5.1-test-dataset.md  5.2-hga-format.md  5.2-threshold-tuning.md  6.1-cli-interface.md  6.1-final-polish.md  QUICK_REFERENCE.md  README.md
src/: main.cpp
src/classification/: classifier.cpp
src/clustering/: kmeans.cpp  spatial_hash.cpp
src/core/: primitive.cpp  scene.cpp
src/loaders/: mesh_loader.cpp  ply_loader.cpp
src/metrics/: alpha_metrics.cpp  normal_coherence.cpp  pca_analysis.cpp
src/viewer/: CMakeLists.txt
tests/: CMakeLists.txt
