# Tests CMakeLists.txt

# We'll use Catch2 for testing
# For now, this is a placeholder

# Example test setup (to be expanded):
# find_package(Catch2 REQUIRED)
#
# add_executable(test_loaders test_loaders.cpp)
# target_link_libraries(test_loaders PRIVATE geode Catch2::Catch2)
#
# add_test(NAME LoaderTests COMMAND test_loaders)

message(STATUS "Tests will be added in Phase 1")
